# Meritmap-humaniser-pipeline

./: .env.example  .gitignore  2.tex  README.md  dummy_report.json  dummy_test_s1.tex  latex-humanization-pipeline.skill  main.tex  main_quality_report.json  pyproject.toml  scratch_path_test.py  start-up-command.txt
.skill_extracted/latex-humanization-pipeline/: SKILL.md
StealthHumanizer-master/: README.md  package.json
config/: default.yaml
config/domains/: computer_science.yaml  economics.yaml  engineering.yaml  materials_science.yaml  medicine.yaml  psychology.yaml
config/journals/: acm.yaml  elsevier.yaml  ieee.yaml  nature.yaml  springer.yaml
config/prompts/: antigravity_humanize.txt  humanise_pass1.txt  humanise_pass2.txt  humanise_pass3.txt  reviewer_methodology.txt  reviewer_novelty.txt  reviewer_statistics.txt  reviewer_writing.txt  rewrite_base.txt  stage2_scrub.txt  stage3_cognitive_remodel.txt  stage4_voice_calibration.txt  stage5_structural_camouflage.txt  stage6_technical_hardening.txt  stage7_citation_auth.txt  stealth_light.txt  stealth_medium.txt  style_improvement.txt
config/voices/: balanced_scholar.yaml  conversational_expert.yaml  narrative_weaver.yaml  precise_analyst.yaml  technical_minimalist.yaml
humanize-main/: .gitignore  README.md  _config.yml  install.sh
humanize-main/_includes/: head-custom.html
humanize-main/ai-check/: SKILL.md
humanize-main/humanize/: SKILL.md
humanize-text-main/: README.md  setup.py
scripts/: download_models.py
tests/: test_gate_polarity.py  test_sentence_scorer_calibration.py
(+61 files in other folders)
